# el320x240_36hb-sender

./: .gitignore  Cargo.toml  README.md  vcpkg.json
.cargo/: config.toml
.gitea/workflows/: ci.yaml  push_request.yaml
shader-algo-debug/: pinwheel.py
src/: args.rs  compute_config.rs  compute_stage_control.rs  el320x240_36hb_sender.rs  ffmpeg_compand.rs  lib.rs  main.rs  main.rs__  state.rs  texture.rs  verticies.rs
src/compute_stage_control/: ordered.rs  pinwheel.rs  threshold.rs
src/compute_stage_control/shaders/: compute_shader_ordered.wgsl  compute_shader_pinwheel.wgsl  compute_shader_threshold.wgsl
src/shaders/: compute_shader.wgsl  compute_shader_ordered.wgsl  compute_shader_threshold.wgsl  graphic_shader.wgsl  shader.wgsl
