[package]
name = "el320x240_36hb-sender"
version = "0.1.0"
authors = ["ololoshka2871"]
edition = "2018"
readme = "README.md"
resolver="2"

[lib]
crate-type = ["rlib"]

[dependencies]
nokhwa = { version = "0.10.3", features = ["input-native"] }
flume = "0.10.9"
structopt = { version = "0.3", default-features = false }
serialport = { version = "4.2", default-features = false }
bytes = { version = "1", default-features = false }
winit = "0.27"
wgpu = "0.15"
futures = "0.3.25"
env_logger = "0.10"
pollster = "0.2.5"
bytemuck = { version = "1.13", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
anyhow = "1.0"
fps_counter = "2.0"
futures-intrusive = "0.5"
parking_lot = "0.12.1"
const_format = { version = "0.2" }

[profile.release]
debug = true # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг

[features]
default = ["diffuse8x8"]
diffuse8x8 = []